--- a/PSExampleApp/PSExampleApp.Android/PSExampleApp.Android.csproj
+++ b/PSExampleApp/PSExampleApp.Android/PSExampleApp.Android.csproj
@@ -62,7 +62,16 @@
     <AndroidCreatePackagePerAbi>false</AndroidCreatePackagePerAbi>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FTDI">
+      <HintPath>..\..\PSLibraries\FTDI.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.Android" />
+    <Reference Include="PalmSens.Core">
+      <HintPath>..\..\PSLibraries\PalmSens.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="PalmSens.PSAndroid.Core">
+      <HintPath>..\..\PSLibraries\PalmSens.PSAndroid.Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -115,6 +124,10 @@
     <None Include="..\..\.editorconfig">
       <Link>.editorconfig</Link>
     </None>
+    <AndroidAsset Include="Assets\MockData.pssession" />
+    <AndroidAsset Include="Assets\PSNoiseTest.pssession" />
+    <AndroidAsset Include="Assets\DPVexample.pssession" />
+    <AndroidAsset Include="Assets\EIS_HEI_2.pssession" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
