--- a/PSLibraries/PalmSens.Core.Simplified.XF.Application/PalmSens.Core.Simplified.XF.Application.csproj
+++ b/PSLibraries/PalmSens.Core.Simplified.XF.Application/PalmSens.Core.Simplified.XF.Application.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Essentials" Version="1.8.0" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2622" />
   </ItemGroup>
 
   <ItemGroup>
