--- a/PSExampleApp/PSExampleApp.Android/PSExampleApp.Android.csproj
+++ b/PSExampleApp/PSExampleApp.Android/PSExampleApp.Android.csproj
@@ -128,6 +128,7 @@
     <AndroidAsset Include="Assets\PSNoiseTest.pssession" />
     <AndroidAsset Include="Assets\DPVexample.pssession" />
     <AndroidAsset Include="Assets\EIS_HEI_2.pssession" />
+    <AndroidAsset Include="Assets\EISdummy.pssession" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
