--- a/PSExampleApp/PSExampleApp/PSExampleApp.Forms.csproj
+++ b/PSExampleApp/PSExampleApp/PSExampleApp.Forms.csproj
@@ -95,9 +95,15 @@
     <Compile Update="Styles\Generic.xaml.cs">
       <DependentUpon>Generic.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\MockDataView.xaml.cs">
+      <DependentUpon>MockDataView.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\HeiView.xaml.cs">
       <DependentUpon>HeiView.xaml</DependentUpon>
     </Compile>
+	<Compile Update="Views\MockDataView.xaml.cs">
+	  <DependentUpon>MockDataView.xaml</DependentUpon>
+	</Compile>
     <Compile Update="Views\SelectAnalyteView.xaml.cs">
       <DependentUpon>SelectAnalyteView.xaml</DependentUpon>
     </Compile>
