Implemented QR code reading

--- a/PSExampleApp/PSExampleApp.Android/PSExampleApp.Android.csproj
+++ b/PSExampleApp/PSExampleApp.Android/PSExampleApp.Android.csproj
@@ -109,6 +109,9 @@
     <PackageReference Include="Xamarin.Forms.Visual.Material">
       <Version>5.0.0.2622</Version>
     </PackageReference>
+    <PackageReference Include="ZXing.Net.Mobile">
+      <Version>2.4.1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomRenderers\CustomNavigationPageRenderer.cs" />
