--- a/PSExampleApp/PSExampleApp/PSExampleApp.Forms.csproj
+++ b/PSExampleApp/PSExampleApp/PSExampleApp.Forms.csproj
@@ -69,6 +69,7 @@
     <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2622" />
     <PackageReference Include="Xamarin.Forms.Visual.Material" Version="5.0.0.2622" />
+    <PackageReference Include="ZXing.Net.Mobile" Version="2.4.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -94,6 +95,9 @@
     </Compile>
     <Compile Update="Styles\Generic.xaml.cs">
       <DependentUpon>Generic.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\QRCodeScannerPage.xaml.cs">
+      <DependentUpon>QRCodeScannerPage.xaml</DependentUpon>
     </Compile>
     <Compile Update="Views\MockDataView.xaml.cs">
       <DependentUpon>MockDataView.xaml</DependentUpon>
